archive: fix wrong data types

Libarchive 3.0 changed public interface to use int64_t uniformly
instead of off_t, ino_t, uid_t, gid_t, and dev_t.

https://bugzilla.gnome.org/show_bug.cgi?id=670534